# advent-of-code

./: .gitattributes  .gitmodules  README.md  dev-requirements.txt  makefile  pyproject.toml  requirements.txt
2025/: aoc2025_day01_secret_entrance.py  aoc2025_day02_gift_shop.py  aoc2025_day03_lobby.py  aoc2025_day04_printing_department.py  aoc2025_day05_cafeteria.py  aoc2025_day06_trash_compactor.py  aoc2025_day07_laboratories.py  aoc2025_day08_playground.py
aoc/: __init__.py
aoc_utils/: __init__.py
