[project]
name = "aoc"
description = "Advent of code (https://adventofcode.com/) puzzles."
version = "2025.12.6"
license = "AGPL-3.0-or-later"
authors = [
  { name="Ben Hattem", email="benghattem@gmail.com" },
]
requires-python = "<3.14"
classifiers = [
    "Development Status :: 1 - Planning",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "line_profiler",
    "pyinstrument",
    "pylint",
    "pytest",
    "snakeviz",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aoc"]

[tool.uv]
link-mode = "copy"

[tool.uv.pip]
annotation-style = "line"
universal = true

[tool.ruff]
line-length = 120
indent-width = 4

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
]

[tool.pylint.typecheck]
generated-members = [
]
